[gd_scene load_steps=5 format=3 uid="uid://bn567ysmm8kqn"]

[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="1_6q8ci"]
[ext_resource type="Texture2D" uid="uid://c4jjp337jghy1" path="res://Assets/circofondomenu.jpg" id="1_b216n"]
[ext_resource type="FontFile" uid="uid://cdgviiim5ysqe" path="res://Resources/alagard.ttf" id="2_ust0v"]

[sub_resource type="LabelSettings" id="LabelSettings_phivw"]
font = ExtResource("2_ust0v")
font_size = 68
font_color = Color(0.12549, 0.113725, 0.458824, 1)
outline_size = 13
shadow_size = 7
shadow_color = Color(0.211765, 0.239216, 0.764706, 0.423529)
shadow_offset = Vector2(7, 10)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 7.0
offset_right = 4.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6q8ci")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(531, 88)
scale = Vector2(1.2325, 1.2325)
texture = ExtResource("1_b216n")
metadata/_edit_lock_ = true

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 410.0
offset_top = 283.0
offset_right = 663.0
offset_bottom = 376.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.12549, 0.113725, 0.458824, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_ust0v")
theme_override_font_sizes/font_size = 35
text = "PLAY
"

[node name="MenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 902.0
offset_top = 351.0
offset_right = 1096.0
offset_bottom = 425.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.12549, 0.113725, 0.458824, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_ust0v")
theme_override_font_sizes/font_size = 35
text = "MENU"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 76.0
offset_top = 438.0
offset_right = 408.0
offset_bottom = 569.0
text = "Circus 
Nightmare"
label_settings = SubResource("LabelSettings_phivw")

[node name="CreditButton" type="Button" parent="."]
layout_mode = 0
offset_left = 925.0
offset_top = 35.0
offset_right = 1104.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.12549, 0.113725, 0.458824, 1)
theme_override_font_sizes/font_size = 27
text = "CREDITS"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="CreditButton" to="." method="_on_credit_button_pressed"]
